test/semantic-errors/22.pas
program p;
procedure f(i:integer);
begin writeln(1)end;
begin f(2.0)end.
